--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,13 @@
 
 
         <!--数据库相关-->
+
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.2</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.3.1.tmp</version>
         </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
